[package]

name = "piston2d-drag_controller"
version = "0.29.0"
authors = [
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["drag", "drop", "controller", "piston", "2d"]
description = "A drag controller"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/drag_controller.git"
homepage = "https://github.com/pistondevelopers/drag_controller"

[lib]

name = "drag_controller"
path = "src/lib.rs"

[dependencies]
pistoncore-input = "0.28.0"

